--- a/app/src/main/res/layout/cir_bar.xml
+++ b/app/src/main/res/layout/cir_bar.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <data>
-        <variable
-            name="cir"
-            type="String" />
-    </data>
+
     <LinearLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
@@ -22,7 +18,7 @@
             android:orientation="horizontal">
 
             <com.example.scadanli.CirCleProgressBar
-                android:id="@+id/humidity_circle"
+                android:id="@+id/cir_circle"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
@@ -37,12 +33,11 @@
                 app:total_angle="220" />
 
             <TextView
-                android:id="@+id/humidity"
+                android:id="@+id/cir"
                 android:layout_width="50dp"
                 android:layout_height="100dp"
                 android:layout_marginStart="10sp"
                 android:gravity="center"
-                android:text="当前湿度"
                 android:textSize="20sp" />
         </LinearLayout>
 
