--- a/app/src/main/res/layout/control_bar.xml
+++ b/app/src/main/res/layout/control_bar.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-        <data>
-                <variable
-                    name="control"
-                    type="String" />
-        </data>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -21,23 +17,23 @@
                     android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/control_title"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
-                            android:text="日光灯"
                             android:textColor="#2E2E2E"
                             android:textSize="20sp" />
 
                         <TextView
+                            android:id="@+id/control_time"
                             android:layout_width="match_parent"
                             android:layout_height="20dp"
-                            android:text="早上9:00"
                             android:textSize="15sp" />
 
                         <TextView
+                            android:id="@+id/control_status"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:gravity="end"
-                            android:text="开"
                             android:textColor="@color/black"
                             android:textSize="35sp" />
                 </LinearLayout>
