--- a/app/src/main/res/layout/add_bar.xml
+++ b/app/src/main/res/layout/add_bar.xml
@@ -6,7 +6,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:orientation="vertical"
-        android:id="@+id/display_bar">
+        android:id="@+id/add_bar">
 
         <LinearLayout
             android:layout_width="120dp"
@@ -17,23 +17,16 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/display"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/display_num"
-                android:layout_width="match_parent"
+                android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:textColor="@color/black"
-                android:textSize="30sp" />
+                android:background="@drawable/ic_add" />
 
             <TextView
-                android:id="@+id/display_unit"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:gravity="end"
+                android:layout_width="80dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="长按添加组件"
                 android:textSize="20sp" />
 
         </LinearLayout>
